test_scores/negative_dimers/features/O95639.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O95639.pkl.xz